@@ -1,10 +1,11 @@
 ---
-version: 4
-datadir: data
+version: 5
+defaults:
+  datadir: data
+  data_hash: yaml_data
 hierarchy:
   - name: "OS family - Major Release"
-    backend: yaml
-    path: "os/%{facts.os.family}-%{facts.os.release.major}"
+    path: "os/%{facts.os.family}-%{facts.os.release.major}.yaml"
 
   - name: "common"
-    backend: yaml
+    path: "common.yaml"
